--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
       </div>
     </div>
     <div id="timer" class="gradientText"></div>
-    <div></div>
+    <div style="display: flex;">
+      <img id="soundMute" src="img/unmuted.png" style="height: 30px;" class="clickable"/>
+      <div style="display: flex;">
+        <input id="soundVolumeRange" type="range" min="0" max="100" name="soundVolumeRange"/>
+        <output id="soundVolumeRatio" for="soundVolumeRange"></output>
+      </div>
+    </div>
   </div>
 
   <div id="centerGameScreen">
